fix z-index, add onclick to menu-btns

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 15;
+  z-index: 11;
   overflow: hidden;
 
   display: flex;
